testdata/typechecker/error/PrintTest-err.java
int main() {
            printInt(false); // TE
		return 0;
}
